// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HvSlider> sample snapshot testing Disabled 1`] = `
<div>
  <div
    class="HvSlider-rootDisabled-183 HvFormElement-root-209"
    id="SingleDisabled"
  >
    <div
      class="HvSlider-labelContainer-194 HvSlider-labelIncluded-195"
    >
      <label
        class="HvSlider-label-197 HvLabel-root-210 HvLabel-labelDisabled-211 HvTypography-root-213 HvTypography-highlightText-225"
        for="SingleDisabled-slider"
        id="SingleDisabled-label"
      >
        Failure Rate
      </label>
      <div
        class="HvSliderInput-inputRoot-235"
      >
        <div
          class="HvSliderInput-inputContainer-237"
        >
          <div
            class="HvInput-root-238 HvSliderInput-input-236 HvFormElement-root-209"
            id="SingleDisabled-input-0"
          >
            <div
              class="HvBaseInput-root-257 HvBaseInput-disabled-260"
            >
              <div
                class="HvBaseInput-inputRoot-262 HvInput-inputRoot-240 MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary HvBaseInput-inputRootDisabled-264 HvInput-inputRootDisabled-242 Mui-disabled css-12yeguk-MuiInputBase-root-MuiInput-root"
              >
                <input
                  aria-label="Failure Rate-0"
                  class="HvBaseInput-input-266 HvInput-input-244 HvBaseInput-inputDisabled-267 MuiInput-input MuiInputBase-input HvBaseInput-inputRootDisabled-264 HvInput-inputRootDisabled-242 Mui-disabled css-16hxuvb-MuiInputBase-input-MuiInput-input"
                  disabled=""
                  id="SingleDisabled-input-0-input"
                  rows="10"
                  type="text"
                  value="10"
                />
              </div>
              <div
                class="HvBaseInput-inputBorderContainer-269 HvInput-inputBorderContainer-256"
                role="presentation"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="HvSlider-sliderBase-182 HvSlider-sliderContainer-184"
    >
      <div
        class="rc-slider HvSlider-sliderRoot-188 rc-slider-disabled rc-slider-horizontal rc-slider-with-marks"
      >
        <div
          class="rc-slider-rail"
          style="background-color: rgb(204, 206, 208); height: 1px; z-index: -3;"
        />
        <div
          class="rc-slider-track"
          style="left: 0%; width: 10%; background-color: rgb(153, 153, 153); height: 3px; z-index: -1; margin-top: -1px;"
        />
        <div
          class="rc-slider-step"
        >
          <span
            class="rc-slider-dot rc-slider-dot-active"
            style="left: 0%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: not-allowed; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 20%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: not-allowed; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 40%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: not-allowed; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 60%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: not-allowed; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 80%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: not-allowed; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 100%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: not-allowed; vertical-align: middle; z-index: -3;"
          />
        </div>
        <div
          class="HvSlider-handleContainerDisabled-192"
        >
          <div
            aria-disabled="true"
            aria-label="Failure Rate-knob-0"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="10"
            class="rc-slider-handle HvSlider-handle-191"
            id="SingleDisabled-knob-0"
            role="slider"
            style="left: 10%; transform: translateX(-50%); border-color: transparent; box-shadow: none; background-color: rgb(153, 153, 153); width: 16px; height: 16px;"
          />
        </div>
        <div
          class="rc-slider-mark"
        >
          <span
            class="rc-slider-mark-text rc-slider-mark-text-active"
            style="left: 0%; transform: translateX(-50%); color: rgb(153, 153, 153); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; cursor: not-allowed; top: -2px;"
          >
            0
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 20%; transform: translateX(-50%); color: rgb(153, 153, 153); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; cursor: not-allowed; top: -2px;"
          >
            20
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 40%; transform: translateX(-50%); color: rgb(153, 153, 153); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; cursor: not-allowed; top: -2px;"
          >
            40
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 60%; transform: translateX(-50%); color: rgb(153, 153, 153); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; cursor: not-allowed; top: -2px;"
          >
            60
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 80%; transform: translateX(-50%); color: rgb(153, 153, 153); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; cursor: not-allowed; top: -2px;"
          >
            80
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 100%; transform: translateX(-50%); color: rgb(153, 153, 153); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; cursor: not-allowed; top: -2px;"
          >
            100
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HvSlider> sample snapshot testing Error 1`] = `
<div>
  <div
    class="HvFormElement-root-390"
    id="ErrorSingleSlider"
  >
    <div
      class="HvSlider-labelContainer-375 HvSlider-labelIncluded-376"
    >
      <label
        class="HvSlider-label-378 HvLabel-root-391 HvTypography-root-394 HvTypography-highlightText-406"
        for="ErrorSingleSlider-slider"
        id="ErrorSingleSlider-label"
      >
        Failure Rate
      </label>
      <div
        class="HvSliderInput-inputRoot-416"
      >
        <div
          class="HvSliderInput-inputContainer-418"
        >
          <div
            class="HvInput-root-419 HvSliderInput-input-417 HvFormElement-root-390"
            id="ErrorSingleSlider-input-0"
          >
            <div
              class="HvBaseInput-root-438 HvBaseInput-invalid-442"
            >
              <div
                class="HvBaseInput-inputRoot-443 HvInput-inputRoot-421 MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-12yeguk-MuiInputBase-root-MuiInput-root"
              >
                <input
                  aria-invalid="true"
                  aria-label="Failure Rate-0"
                  class="HvBaseInput-input-447 HvInput-input-425 MuiInput-input MuiInputBase-input css-16hxuvb-MuiInputBase-input-MuiInput-input"
                  id="ErrorSingleSlider-input-0-input"
                  rows="10"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="HvBaseInput-inputBorderContainer-450 HvInput-inputBorderContainer-437"
                role="presentation"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="HvSlider-sliderBase-363 HvSlider-sliderContainer-365"
    >
      <div
        class="rc-slider HvSlider-sliderRoot-369 rc-slider-horizontal rc-slider-with-marks"
      >
        <div
          class="rc-slider-rail"
          style="background-color: rgb(204, 206, 208); height: 1px; z-index: -3;"
        />
        <div
          class="rc-slider-track"
          style="left: 0%; width: 0%; background-color: rgb(65, 65, 65); height: 3px; z-index: -1; margin-top: -1px;"
        />
        <div
          class="rc-slider-step"
        >
          <span
            class="rc-slider-dot rc-slider-dot-active"
            style="left: 0%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 20%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 40%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 60%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 80%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 100%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
        </div>
        <div
          class="HvSlider-handleHiddenContainer-374"
        >
          <div
            aria-disabled="false"
            aria-label="Failure Rate-knob-0"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="0"
            class="rc-slider-handle HvSlider-handle-372"
            id="ErrorSingleSlider-knob-0"
            role="slider"
            style="left: 0%; transform: translateX(-50%); border-color: transparent; box-shadow: none; background-color: rgb(65, 65, 65); width: 16px; height: 16px;"
            tabindex="0"
          />
        </div>
        <div
          class="rc-slider-mark"
        >
          <span
            class="rc-slider-mark-text rc-slider-mark-text-active"
            style="left: 0%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            0
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 20%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            20
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 40%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            40
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 60%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            60
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 80%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            80
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 100%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            100
          </span>
        </div>
      </div>
    </div>
    <div
      class="HvSlider-error-366 HvWarningText-root-451 HvWarningText-show-456"
    >
      <div
        class="HvWarningText-defaultIcon-455 HvIconBase-root-458 HvIconBase-s-460"
        name="Fail"
      >
        <svg
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="color0"
            d="M7.5 4.001h1v6h-1zm0 8h1v-1h-1zM16 8a8 8 0 10-8 8 8 8 0 008-8zm-1 0a7 7 0 11-7-7 7 7 0 017 7z"
            fill="#C62828"
          />
        </svg>
      </div>
      <p
        aria-atomic="true"
        aria-live="polite"
        aria-relevant="additions text"
        class="HvWarningText-warningText-454 HvWarningText-topGutter-453 HvTypography-root-394 HvTypography-normalText-407"
        id="ErrorSingleSlider-error"
      >
        Invalid because i said so
      </p>
    </div>
  </div>
</div>
`;

exports[`<HvSlider> sample snapshot testing Main 1`] = `
<div>
  <div
    class="HvFormElement-root-28"
    id="Main"
  >
    <div
      class="HvSlider-labelContainer-13 HvSlider-labelIncluded-14"
    >
      <label
        class="HvSlider-label-16 HvLabel-root-29 HvTypography-root-32 HvTypography-highlightText-44"
        for="Main-slider"
        id="Main-label"
      >
        Failure Rate
      </label>
      <div
        class="HvSliderInput-inputRoot-54"
      >
        <div
          class="HvSliderInput-inputContainer-56"
        >
          <div
            class="HvInput-root-57 HvSliderInput-input-55 HvFormElement-root-28"
            id="Main-input-0"
          >
            <div
              class="HvBaseInput-root-76"
            >
              <div
                class="HvBaseInput-inputRoot-81 HvInput-inputRoot-59 MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-12yeguk-MuiInputBase-root-MuiInput-root"
              >
                <input
                  aria-label="Failure Rate-0"
                  class="HvBaseInput-input-85 HvInput-input-63 MuiInput-input MuiInputBase-input css-16hxuvb-MuiInputBase-input-MuiInput-input"
                  id="Main-input-0-input"
                  rows="10"
                  type="text"
                  value="10"
                />
              </div>
              <div
                class="HvBaseInput-inputBorderContainer-88 HvInput-inputBorderContainer-75"
                role="presentation"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="HvSlider-sliderBase-1 HvSlider-sliderContainer-3"
    >
      <div
        class="rc-slider HvSlider-sliderRoot-7 rc-slider-horizontal rc-slider-with-marks"
      >
        <div
          class="rc-slider-rail"
          style="background-color: rgb(204, 206, 208); height: 1px; z-index: -3;"
        />
        <div
          class="rc-slider-track"
          style="left: 0%; width: 10%; background-color: rgb(65, 65, 65); height: 3px; z-index: -1; margin-top: -1px;"
        />
        <div
          class="rc-slider-step"
        >
          <span
            class="rc-slider-dot rc-slider-dot-active"
            style="left: 0%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 20%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 40%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 60%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 80%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 100%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
        </div>
        <div
          class="HvSlider-handleContainer-9"
        >
          <div
            aria-disabled="false"
            aria-label="Failure Rate-knob-0"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="10"
            class="rc-slider-handle HvSlider-handle-10"
            id="Main-knob-0"
            role="slider"
            style="left: 10%; transform: translateX(-50%); border-color: transparent; box-shadow: none; background-color: rgb(65, 65, 65); width: 16px; height: 16px;"
            tabindex="0"
          />
        </div>
        <div
          class="rc-slider-mark"
        >
          <span
            class="rc-slider-mark-text rc-slider-mark-text-active"
            style="left: 0%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            0
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 20%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            20
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 40%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            40
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 60%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            60
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 80%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            80
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 100%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            100
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HvSlider> sample snapshot testing Range Disabled 1`] = `
<div>
  <div
    class="HvSlider-rootDisabled-271 HvFormElement-root-297"
    id="RangeSliderDisabled"
  >
    <div
      class="HvSlider-labelContainer-282 HvSlider-labelIncluded-283"
    >
      <label
        class="HvSlider-label-285 HvLabel-root-298 HvLabel-labelDisabled-299 HvTypography-root-301 HvTypography-highlightText-313"
        for="RangeSliderDisabled-slider"
        id="RangeSliderDisabled-label"
      >
        Failure Rate
      </label>
      <div
        class="HvSliderInput-inputRoot-323"
      >
        <div
          class="HvSliderInput-inputContainer-325"
        >
          <div
            class="HvInput-root-326 HvSliderInput-input-324 HvFormElement-root-297"
            id="RangeSliderDisabled-input-0"
          >
            <div
              class="HvBaseInput-root-345 HvBaseInput-disabled-348"
            >
              <div
                class="HvBaseInput-inputRoot-350 HvInput-inputRoot-328 MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary HvBaseInput-inputRootDisabled-352 HvInput-inputRootDisabled-330 Mui-disabled css-12yeguk-MuiInputBase-root-MuiInput-root"
              >
                <input
                  aria-label="Failure Rate-0"
                  class="HvBaseInput-input-354 HvInput-input-332 HvBaseInput-inputDisabled-355 MuiInput-input MuiInputBase-input HvBaseInput-inputRootDisabled-352 HvInput-inputRootDisabled-330 Mui-disabled css-16hxuvb-MuiInputBase-input-MuiInput-input"
                  disabled=""
                  id="RangeSliderDisabled-input-0-input"
                  rows="10"
                  type="text"
                  value="10"
                />
              </div>
              <div
                class="HvBaseInput-inputBorderContainer-357 HvInput-inputBorderContainer-344"
                role="presentation"
              />
            </div>
          </div>
        </div>
        <div
          class="HvSliderInput-inputContainer-325"
        >
          <div
            class="HvIconBase-root-358 HvIconBase-s-360"
            name="Remove"
          >
            <svg
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M0 7.5h16v1H0z"
                fill="#CCCED0"
              />
            </svg>
          </div>
          <div
            class="HvInput-root-326 HvSliderInput-input-324 HvFormElement-root-297"
            id="RangeSliderDisabled-input-1"
          >
            <div
              class="HvBaseInput-root-345 HvBaseInput-disabled-348"
            >
              <div
                class="HvBaseInput-inputRoot-350 HvInput-inputRoot-328 MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary HvBaseInput-inputRootDisabled-352 HvInput-inputRootDisabled-330 Mui-disabled css-12yeguk-MuiInputBase-root-MuiInput-root"
              >
                <input
                  aria-label="Failure Rate-1"
                  class="HvBaseInput-input-354 HvInput-input-332 HvBaseInput-inputDisabled-355 MuiInput-input MuiInputBase-input HvBaseInput-inputRootDisabled-352 HvInput-inputRootDisabled-330 Mui-disabled css-16hxuvb-MuiInputBase-input-MuiInput-input"
                  disabled=""
                  id="RangeSliderDisabled-input-1-input"
                  rows="10"
                  type="text"
                  value="40"
                />
              </div>
              <div
                class="HvBaseInput-inputBorderContainer-357 HvInput-inputBorderContainer-344"
                role="presentation"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="HvSlider-sliderBase-270 HvSlider-sliderContainer-272"
    >
      <div
        class="rc-slider HvSlider-sliderRoot-276 HvSlider-rootRange-277 rc-slider-disabled rc-slider-horizontal rc-slider-with-marks"
      >
        <div
          class="rc-slider-rail"
          style="background-color: rgb(204, 206, 208); height: 1px; z-index: -3;"
        />
        <div
          class="rc-slider-track rc-slider-track-1"
          style="left: 10%; width: 30%; background-color: rgb(153, 153, 153); height: 3px; z-index: -1; margin-top: -1px;"
        />
        <div
          class="rc-slider-step"
        >
          <span
            class="rc-slider-dot"
            style="left: 0%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: not-allowed; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot rc-slider-dot-active"
            style="left: 20%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: not-allowed; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot rc-slider-dot-active"
            style="left: 40%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: not-allowed; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 60%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: not-allowed; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 80%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: not-allowed; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 100%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: not-allowed; vertical-align: middle; z-index: -3;"
          />
        </div>
        <div
          class="HvSlider-handleContainerDisabled-280"
        >
          <div
            aria-disabled="true"
            aria-label="Failure Rate-knob-0"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="10"
            class="rc-slider-handle rc-slider-handle-1 HvSlider-handle-279"
            id="RangeSliderDisabled-knob-0"
            role="slider"
            style="left: 10%; transform: translateX(-50%); border-color: transparent; box-shadow: none; background-color: rgb(153, 153, 153); width: 16px; height: 16px;"
          />
        </div>
        <div
          class="HvSlider-handleContainerDisabled-280"
        >
          <div
            aria-disabled="true"
            aria-label="Failure Rate-knob-1"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="40"
            class="rc-slider-handle rc-slider-handle-2 HvSlider-handle-279"
            id="RangeSliderDisabled-knob-1"
            role="slider"
            style="left: 40%; transform: translateX(-50%); border-color: transparent; box-shadow: none; background-color: rgb(153, 153, 153); width: 16px; height: 16px;"
          />
        </div>
        <div
          class="rc-slider-mark"
        >
          <span
            class="rc-slider-mark-text"
            style="left: 0%; transform: translateX(-50%); color: rgb(153, 153, 153); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; cursor: not-allowed; top: -2px;"
          >
            0
          </span>
          <span
            class="rc-slider-mark-text rc-slider-mark-text-active"
            style="left: 20%; transform: translateX(-50%); color: rgb(153, 153, 153); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; cursor: not-allowed; top: -2px;"
          >
            20
          </span>
          <span
            class="rc-slider-mark-text rc-slider-mark-text-active"
            style="left: 40%; transform: translateX(-50%); color: rgb(153, 153, 153); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; cursor: not-allowed; top: -2px;"
          >
            40
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 60%; transform: translateX(-50%); color: rgb(153, 153, 153); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; cursor: not-allowed; top: -2px;"
          >
            60
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 80%; transform: translateX(-50%); color: rgb(153, 153, 153); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; cursor: not-allowed; top: -2px;"
          >
            80
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 100%; transform: translateX(-50%); color: rgb(153, 153, 153); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; cursor: not-allowed; top: -2px;"
          >
            100
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<HvSlider> sample snapshot testing Range Error 1`] = `
<div>
  <div
    class="HvSlider-trackStandBy-468 HvFormElement-root-490"
    id="ErrorRangeSlider"
  >
    <div
      class="HvSlider-labelContainer-475 HvSlider-labelIncluded-476"
    >
      <label
        class="HvSlider-label-478 HvLabel-root-491 HvTypography-root-494 HvTypography-highlightText-506"
        for="ErrorRangeSlider-slider"
        id="ErrorRangeSlider-label"
      >
        Failure Rate
      </label>
      <div
        class="HvSliderInput-inputRoot-516"
      >
        <div
          class="HvSliderInput-inputContainer-518"
        >
          <div
            class="HvInput-root-519 HvSliderInput-input-517 HvFormElement-root-490"
            id="ErrorRangeSlider-input-0"
          >
            <div
              class="HvBaseInput-root-538 HvBaseInput-invalid-542"
            >
              <div
                class="HvBaseInput-inputRoot-543 HvInput-inputRoot-521 MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-12yeguk-MuiInputBase-root-MuiInput-root"
              >
                <input
                  aria-invalid="true"
                  aria-label="Failure Rate-0"
                  class="HvBaseInput-input-547 HvInput-input-525 MuiInput-input MuiInputBase-input css-16hxuvb-MuiInputBase-input-MuiInput-input"
                  id="ErrorRangeSlider-input-0-input"
                  rows="10"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="HvBaseInput-inputBorderContainer-550 HvInput-inputBorderContainer-537"
                role="presentation"
              />
            </div>
          </div>
        </div>
        <div
          class="HvSliderInput-inputContainer-518"
        >
          <div
            class="HvIconBase-root-551 HvIconBase-s-553"
            name="Remove"
          >
            <svg
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M0 7.5h16v1H0z"
                fill="#414141"
              />
            </svg>
          </div>
          <div
            class="HvInput-root-519 HvSliderInput-input-517 HvFormElement-root-490"
            id="ErrorRangeSlider-input-1"
          >
            <div
              class="HvBaseInput-root-538 HvBaseInput-invalid-542"
            >
              <div
                class="HvBaseInput-inputRoot-543 HvInput-inputRoot-521 MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-12yeguk-MuiInputBase-root-MuiInput-root"
              >
                <input
                  aria-invalid="true"
                  aria-label="Failure Rate-1"
                  class="HvBaseInput-input-547 HvInput-input-525 MuiInput-input MuiInputBase-input css-16hxuvb-MuiInputBase-input-MuiInput-input"
                  id="ErrorRangeSlider-input-1-input"
                  rows="10"
                  type="text"
                  value="53"
                />
              </div>
              <div
                class="HvBaseInput-inputBorderContainer-550 HvInput-inputBorderContainer-537"
                role="presentation"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="HvSlider-sliderBase-463 HvSlider-sliderContainer-465"
    >
      <div
        class="rc-slider HvSlider-sliderRoot-469 HvSlider-rootRange-470 rc-slider-horizontal rc-slider-with-marks"
      >
        <div
          class="rc-slider-rail"
          style="background-color: rgb(204, 206, 208); height: 1px; z-index: -3;"
        />
        <div
          class="rc-slider-track rc-slider-track-1"
          style="left: 0%; width: 53%; background-color: rgb(65, 65, 65); height: 3px; z-index: -1; margin-top: -1px;"
        />
        <div
          class="rc-slider-step"
        >
          <span
            class="rc-slider-dot rc-slider-dot-active"
            style="left: 0%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot rc-slider-dot-active"
            style="left: 20%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot rc-slider-dot-active"
            style="left: 40%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 60%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 80%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 100%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
        </div>
        <div
          class="HvSlider-handleHiddenContainer-474"
        >
          <div
            aria-disabled="false"
            aria-label="Failure Rate-knob-0"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="0"
            class="rc-slider-handle rc-slider-handle-1 HvSlider-handle-472"
            id="ErrorRangeSlider-knob-0"
            role="slider"
            style="left: 0%; transform: translateX(-50%); border-color: transparent; box-shadow: none; background-color: rgb(65, 65, 65); width: 16px; height: 16px;"
            tabindex="0"
          />
        </div>
        <div
          class="HvSlider-handleContainer-471"
        >
          <div
            aria-disabled="false"
            aria-label="Failure Rate-knob-1"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="53"
            class="rc-slider-handle rc-slider-handle-2 HvSlider-handle-472"
            id="ErrorRangeSlider-knob-1"
            role="slider"
            style="left: 53%; transform: translateX(-50%); border-color: transparent; box-shadow: none; background-color: rgb(65, 65, 65); width: 16px; height: 16px;"
            tabindex="0"
          />
        </div>
        <div
          class="rc-slider-mark"
        >
          <span
            class="rc-slider-mark-text rc-slider-mark-text-active"
            style="left: 0%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            0
          </span>
          <span
            class="rc-slider-mark-text rc-slider-mark-text-active"
            style="left: 20%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            20
          </span>
          <span
            class="rc-slider-mark-text rc-slider-mark-text-active"
            style="left: 40%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            40
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 60%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            60
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 80%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            80
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 100%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            100
          </span>
        </div>
      </div>
    </div>
    <div
      class="HvSlider-error-466 HvWarningText-root-556 HvWarningText-show-561"
    >
      <div
        class="HvWarningText-defaultIcon-560 HvIconBase-root-551 HvIconBase-s-553"
        name="Fail"
      >
        <svg
          focusable="false"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            class="color0"
            d="M7.5 4.001h1v6h-1zm0 8h1v-1h-1zM16 8a8 8 0 10-8 8 8 8 0 008-8zm-1 0a7 7 0 11-7-7 7 7 0 017 7z"
            fill="#C62828"
          />
        </svg>
      </div>
      <p
        aria-atomic="true"
        aria-live="polite"
        aria-relevant="additions text"
        class="HvWarningText-warningText-559 HvWarningText-topGutter-558 HvTypography-root-494 HvTypography-normalText-507"
        id="ErrorRangeSlider-error"
      >
        Invalid because i said so
      </p>
    </div>
  </div>
</div>
`;

exports[`<HvSlider> sample snapshot testing Range Slider 1`] = `
<div>
  <div
    class="HvSlider-trackStandBy-94 HvFormElement-root-116"
    id="Range"
  >
    <div
      class="HvSlider-labelContainer-101 HvSlider-labelIncluded-102"
    >
      <label
        class="HvSlider-label-104 HvLabel-root-117 HvTypography-root-120 HvTypography-highlightText-132"
        for="Range-slider"
        id="Range-label"
      >
        Failure Rate
      </label>
      <div
        class="HvSliderInput-inputRoot-142"
      >
        <div
          class="HvSliderInput-inputContainer-144"
        >
          <div
            class="HvInput-root-145 HvSliderInput-input-143 HvFormElement-root-116"
            id="Range-input-0"
          >
            <div
              class="HvBaseInput-root-164"
            >
              <div
                class="HvBaseInput-inputRoot-169 HvInput-inputRoot-147 MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-12yeguk-MuiInputBase-root-MuiInput-root"
              >
                <input
                  aria-label="Failure Rate-0"
                  class="HvBaseInput-input-173 HvInput-input-151 MuiInput-input MuiInputBase-input css-16hxuvb-MuiInputBase-input-MuiInput-input"
                  id="Range-input-0-input"
                  rows="10"
                  type="text"
                  value="10"
                />
              </div>
              <div
                class="HvBaseInput-inputBorderContainer-176 HvInput-inputBorderContainer-163"
                role="presentation"
              />
            </div>
          </div>
        </div>
        <div
          class="HvSliderInput-inputContainer-144"
        >
          <div
            class="HvIconBase-root-177 HvIconBase-s-179"
            name="Remove"
          >
            <svg
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                class="color0"
                d="M0 7.5h16v1H0z"
                fill="#414141"
              />
            </svg>
          </div>
          <div
            class="HvInput-root-145 HvSliderInput-input-143 HvFormElement-root-116"
            id="Range-input-1"
          >
            <div
              class="HvBaseInput-root-164"
            >
              <div
                class="HvBaseInput-inputRoot-169 HvInput-inputRoot-147 MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary css-12yeguk-MuiInputBase-root-MuiInput-root"
              >
                <input
                  aria-label="Failure Rate-1"
                  class="HvBaseInput-input-173 HvInput-input-151 MuiInput-input MuiInputBase-input css-16hxuvb-MuiInputBase-input-MuiInput-input"
                  id="Range-input-1-input"
                  rows="10"
                  type="text"
                  value="40"
                />
              </div>
              <div
                class="HvBaseInput-inputBorderContainer-176 HvInput-inputBorderContainer-163"
                role="presentation"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="HvSlider-sliderBase-89 HvSlider-sliderContainer-91"
    >
      <div
        class="rc-slider HvSlider-sliderRoot-95 HvSlider-rootRange-96 rc-slider-horizontal rc-slider-with-marks"
      >
        <div
          class="rc-slider-rail"
          style="background-color: rgb(204, 206, 208); height: 1px; z-index: -3;"
        />
        <div
          class="rc-slider-track rc-slider-track-1"
          style="left: 10%; width: 30%; background-color: rgb(65, 65, 65); height: 3px; z-index: -1; margin-top: -1px;"
        />
        <div
          class="rc-slider-step"
        >
          <span
            class="rc-slider-dot"
            style="left: 0%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot rc-slider-dot-active"
            style="left: 20%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot rc-slider-dot-active"
            style="left: 40%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 60%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 80%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
          <span
            class="rc-slider-dot"
            style="left: 100%; transform: translateX(-50%); position: absolute; bottom: -1px; margin-left: 0px; width: 1px; height: 4px; border-radius: 0%; background-color: rgb(204, 206, 208); cursor: pointer; vertical-align: middle; z-index: -3;"
          />
        </div>
        <div
          class="HvSlider-handleContainer-97"
        >
          <div
            aria-disabled="false"
            aria-label="Failure Rate-knob-0"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="10"
            class="rc-slider-handle rc-slider-handle-1 HvSlider-handle-98"
            id="Range-knob-0"
            role="slider"
            style="left: 10%; transform: translateX(-50%); border-color: transparent; box-shadow: none; background-color: rgb(65, 65, 65); width: 16px; height: 16px;"
            tabindex="0"
          />
        </div>
        <div
          class="HvSlider-handleContainer-97"
        >
          <div
            aria-disabled="false"
            aria-label="Failure Rate-knob-1"
            aria-valuemax="100"
            aria-valuemin="0"
            aria-valuenow="40"
            class="rc-slider-handle rc-slider-handle-2 HvSlider-handle-98"
            id="Range-knob-1"
            role="slider"
            style="left: 40%; transform: translateX(-50%); border-color: transparent; box-shadow: none; background-color: rgb(65, 65, 65); width: 16px; height: 16px;"
            tabindex="0"
          />
        </div>
        <div
          class="rc-slider-mark"
        >
          <span
            class="rc-slider-mark-text"
            style="left: 0%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            0
          </span>
          <span
            class="rc-slider-mark-text rc-slider-mark-text-active"
            style="left: 20%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            20
          </span>
          <span
            class="rc-slider-mark-text rc-slider-mark-text-active"
            style="left: 40%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            40
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 60%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            60
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 80%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            80
          </span>
          <span
            class="rc-slider-mark-text"
            style="left: 100%; transform: translateX(-50%); color: rgb(65, 65, 65); font-size: 10px; letter-spacing: 0.02em; line-height: 15px; font-weight: 400; font-family: 'Open Sans',Arial,Helvetica,sans-serif; top: -2px; z-index: -1;"
          >
            100
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
